# OpenMonica_fileserver

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
app/legacy/: compatibility_adapter.py  endpoints.py  main.py
app/v1/: endpoints.py
docs/: API_MERGED_DRAFT.md  ARCHITECTURE.md  DEVELOPMENT.md  QUICK_START.md  README.md  SQL_doc.md
examples/: async_cloud_usage_example.py  fast_start.py
scripts/: delete_file_module_legacy.py  file_upload_utils_legacy.py  graph_module_legacy.py  mineru_client_legacy.py  mineru_process_legacy.py  singleton_embedding_legacy.py  start_server_legacy.py  tools_legacy.py
scripts/sql/: 011-create-extension.sql  021-create-document-table.sql  022-create-chunk-trigger-index.sql  023-create-indexes.sql  031-create-conversation-table.sql  知识库数据结构与触发器设计.md
src/file_server_core/: __init__.py
src/file_server_core/client/: __init__.py  client.py
src/file_server_core/models/: __init__.py  document.py  knowledge_base.py  processing.py  user.py
src/file_server_core/ocr/: README.md  __init__.py  base.py  example_new_architecture.py  factory.py  processor.py
src/file_server_core/ocr/config/: __init__.py  base.py  mistral.py
src/file_server_core/ocr/providers/: mistral.py
src/file_server_core/server/: __init__.py  database.py  file_manager.py  server.py  storage.py
src/file_server_core/storage/: __init__.py  manager.py
src/file_server_core/utils/: __init__.py  config_utils.py  file_utils.py
