[project]
name = "file-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "datetime>=5.5",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.24.0",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "pdfplumber>=0.11.6",
    "pgvector>=0.4.1",
    "pillow>=10.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sqlacodegen>=3.1.0",
    "sqlalchemy-utils>=0.42.0",
    "starlette>=0.46.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.2",
]

[tool.uv]
constraint-dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
